# GIAIC_Q4_Hackathon_2_Phase_2_CAARE

./: .env  .gitignore  BACKEND_REFACTORING_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  REFACTORING_QUICK_REFERENCE.md  SECURITY_FIXES_SUMMARY.md  SIGNIN_DEBUG_GUIDE.md  main.py  pyproject.toml
backend/: .env  .env.example  .gitignore  README.md  alembic.ini  diagnostic_test.py  direct_diagnostic.py  final_verification.py  load_env_test.py  pyproject.toml  requirements.txt  test_db_init.py  test_startup.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/routes/: auth.py  tasks.py
backend/app/schemas/: __init__.py  auth.py  response.py  task.py
backend/migrations/: 002_create_users_table.sql  003_add_tasks_user_fk.sql  004_add_task_priority_tags_due_date.sql  check_tasks_data.py  run_migration.py
backend/src/: database.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/endpoints/: auth.py  tasks.py
backend/src/config/: auth.py  settings.py
backend/src/middleware/: auth.py
backend/src/models/: base.py  task.py  user.py
backend/src/schemas/: auth.py  task.py  user.py
backend/src/services/: auth.py  auth_service.py  authz_service.py  task_service.py
backend/src/utils/: jwt.py  jwt_utils.py  security.py
backend/tests/: test_auth.py  test_tasks.py
backend/tests/integration/: test_auth_integration.py  test_task_isolation.py
frontend/: .env.example  .gitignore  (+6 more)
(+157 files in other folders)
